--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,14 @@ input{
   cursor: pointer;
 }
 
+.Blade{
+  background-image: url('/src/Images/Deathblade.png');
+  background-size: 100%;
+  width: 127px;
+  height: 195px;
+  cursor: pointer;
+}
+
 @media (max-width: 600px) {
   /* Adjust the width and height as needed to make the image smaller */
   .Feint,
